tests/positive/std_ffi.ax
module std_ffi;

import std.core.mem;
import std.core.text;
import std.io.console;

fn main() -> i32 {
    let source: *const u8 = c"abc";
    let copy: *mut u8 = alloc_zeroed_bytes(cast(usize, 4), cast(usize, 1));
    if copy == null {
        return 1;
    }
    copy_bytes(copy, source, cast(usize, 3));
    if !c_string_equal(ptr_cast(*const u8, copy), c"abc") {
        free_bytes(copy);
        return 2;
    }
    fill_bytes(copy, b'x', cast(usize, 2));
    if compare_bytes(ptr_cast(*const u8, copy), c"xxc", cast(usize, 3)) != 0 {
        free_bytes(copy);
        return 3;
    }
    if !is_ascii_alnum(b'7') || ascii_to_upper(b'q') != b'Q' || ascii_to_lower(b'Z') != b'z' {
        free_bytes(copy);
        return 4;
    }
    if !c_string_starts_with(c"abcdef", c"abc") {
        free_bytes(copy);
        return 5;
    }
    if !print_char(b'\n') {
        free_bytes(copy);
        return 6;
    }
    free_bytes(copy);
    return 0;
}
