tests/negative/invalid_ptr_cast_numeric.ax
module invalid_ptr_cast_numeric;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    let ptr: *mut i32 = ptr_cast(*mut i32, 1);
    return 0;
}
